--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -20,7 +20,14 @@ jobs:
   check:
     name: Check what pkg were updated
     if: github.repository == 'kubearmor/kubearmor'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]  
     timeout-minutes: 5
     outputs:
       kubearmor: ${{ steps.filter.outputs.kubearmor}}
