--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -11,7 +11,14 @@ jobs:
   push-stable-version:
     name: Create KubeArmor stable release
     if: github.repository == 'kubearmor/kubearmor'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
