--- a/.github/workflows/ci-test-controllers.yml
+++ b/.github/workflows/ci-test-controllers.yml
@@ -11,7 +11,14 @@ on:
 jobs:
   kubearmor-controller-test:
     name: Build and Test KubeArmorController Using Ginkgo
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     timeout-minutes: 30
     steps:
       - uses: actions/setup-go@v3
