--- a/.github/workflows/ci-latest-release.yml
+++ b/.github/workflows/ci-latest-release.yml
@@ -48,7 +48,14 @@ jobs:
     name: Create KubeArmor latest release
     needs: check
     if: github.repository == 'kubearmor/kubearmor' && (needs.check.outputs.kubearmor == 'true' || ${{ github.ref }} != 'refs/heads/main')
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     permissions:
       id-token: write 
     timeout-minutes: 120
@@ -134,7 +141,14 @@ jobs:
     name: Create KubeArmor stable release
     needs: [build, check]
     if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     permissions:
       id-token: write
     timeout-minutes: 60
@@ -184,7 +198,14 @@ jobs:
     defaults:
       run:
         working-directory: ./pkg/KubeArmorController
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     timeout-minutes: 60
     steps:
       - uses: actions/setup-go@v3
