--- a/.github/workflows/ci-stable-release.yml
+++ b/.github/workflows/ci-stable-release.yml
@@ -50,7 +50,14 @@ jobs:
   update-helm-chart:
     name: Update KubeArmor Helm chart version
     if: github.repository == 'kubearmor/kubearmor'
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    env:
+      RUNTIME: ${{ matrix.runtime }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04]
+        runtime: ["docker", "containerd", "crio"]
     timeout-minutes: 20
     permissions:
       contents: write
