--- a/.github/workflows/ci-test-systemd.yml
+++ b/.github/workflows/ci-test-systemd.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        runtime: ["docker", "containerd"]
+        runtime: ["docker", "containerd", "crio"]
     steps:
       - uses: actions/checkout@v3
         with:
