--- a/.github/workflows/ci-latest-helm-chart-release.yaml
+++ b/.github/workflows/ci-latest-helm-chart-release.yaml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        runtime: ["docker", "containerd"]
+        runtime: ["docker", "containerd", "crio"]
     permissions:
       contents: write
     steps:
