--- a/.github/workflows/ci-systemd-release.yml
+++ b/.github/workflows/ci-systemd-release.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        runtime: ["docker", "containerd"]
+        runtime: ["docker", "containerd", "crio"]
     if: github.repository == 'kubearmor/kubearmor'
     steps:
       - uses: actions/checkout@v3
